# file-formatter

./: CMakeLists.txt  README.md  run.sh
example/: config.txt  formatted.txt  sample.txt
src/chain/common/: ChainNode.cpp
src/chain/handlers/: FindScopeHandler.cpp  FormatScopeHandler.cpp  ProtectScopeHandler.cpp
src/chain/include/common/: ChainNode.hpp
src/chain/include/handlers/: FindScopeHandler.hpp  FormatScopeHandler.hpp  ProtectScopeHandler.hpp
src/chain/include/interfaces/: IChainBuilder.hpp  IChainFactory.hpp  IChainNode.hpp  IConfigInterpreter.hpp
src/chain/include/models/guarded/: GuardedChainBuilder.hpp  GuardedChainFactory.hpp  GuardedConfigInterpreter.hpp  GuardedType.hpp
src/chain/models/guarded/: GuardedChainBuilder.cpp  GuardedChainFactory.cpp  GuardedConfigInterpreter.cpp
src/inout/: Reader.cpp  Writer.cpp
src/inout/include/: Reader.hpp  Writer.hpp
src/inout/include/interfaces/: IReadStrategy.hpp  IWriteStrategy.hpp
src/inout/include/readmodes/: FromTextFile.hpp
src/inout/include/writemodes/: ToTextFile.hpp
src/inout/readmodes/: FromTextFile.cpp
src/inout/writemodes/: ToTextFile.cpp
src/main/: main.cpp
src/misc/: Scope.cpp  Utils.cpp
src/misc/include/: Constants.hpp  ExitCode.hpp  Scope.hpp  Utils.hpp
src/modify/factories/: FindersFactory.cpp  FormattersFactory.cpp
src/modify/finders/: FindCharScope.cpp  FindDuplicatedSemicolon.cpp  FindLastLine.cpp  FindLooseParenthesis.cpp  FindMultiLineComment.cpp  FindSingleLineComment.cpp  FindSqueezedParenthesis.cpp  FindStringScope.cpp  FindTrailingBrace.cpp  FindTrailingSpace.cpp
src/modify/formatters/: FormatDuplicatedSemicolon.cpp  FormatLastLine.cpp  FormatLooseParenthesis.cpp  FormatSqueezedParenthesis.cpp  FormatTrailingBrace.cpp  FormatTrailingSpace.cpp
src/modify/include/factories/: FindersFactory.hpp  FormattersFactory.hpp
src/modify/include/finders/: FindCharScope.hpp  FindDuplicatedSemicolon.hpp  FindLastLine.hpp  FindLooseParenthesis.hpp  FindMultiLineComment.hpp  FindSingleLineComment.hpp  FindSqueezedParenthesis.hpp  FindStringScope.hpp  FindTrailingBrace.hpp  FindTrailingSpace.hpp
src/modify/include/formatters/: FormatDuplicatedSemicolon.hpp  FormatLastLine.hpp  FormatLooseParenthesis.hpp  FormatSqueezedParenthesis.hpp  FormatTrailingBrace.hpp  FormatTrailingSpace.hpp
src/modify/include/interfaces/: IFinder.hpp  IFormatter.hpp
src/program/: Program.cpp
src/program/include/: Program.hpp
test/ut/finders/: FindCharScopeTests.cpp  FindDuplicatedSemicolonTests.cpp  FindLastLineTests.cpp  FindLooseParenthesisTests.cpp  FindMultiLineCommentTests.cpp  FindSingleLineCommentTests.cpp  FindSqueezedParenthesisTests.cpp  FindStringScopeTests.cpp  FindTrailingBraceTests.cpp  FindTrailingSpaceTests.cpp
test/ut/formatters/: FormatDuplicatedSemicolonTests.cpp  FormatLastLineTests.cpp  FormatLooseParenthesisTests.cpp  FormatSqueezedParenthesisTests.cpp  FormatTrailingBraceTests.cpp  FormatTrailingSpaceTests.cpp
